ci: fix github actions pipeline to deliver cross-platform builds and releases

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,24 +5,30 @@ name: Go
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main", "dev"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main", "dev"]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.20'
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.24.x"
 
-    - name: Build
-      run: go build -v ./...
+      - name: Build
+        run: make build-all
 
-    - name: Test
-      run: go test -v ./...
+      - name: Test
+        run: go test -v ./...
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: iron-binaries
+          path: dist/*
+          retention-days: 5
